feat: Refine dashboard metrics and improve UX

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://RodrigoMD2025.github.io/seasonal-tune-planner",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && node -e \"require('fs').copyFileSync('dist/index.html', 'dist/404.html')\"",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
