feat(auth): Implement Firebase email/password authentication

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
+# Firebase Configuration
+VITE_FIREBASE_API_KEY=
+VITE_FIREBASE_AUTH_DOMAIN=
+VITE_FIREBASE_PROJECT_ID=
+VITE_FIREBASE_STORAGE_BUCKET=
+VITE_FIREBASE_MESSAGING_SENDER_ID=
+VITE_FIREBASE_APP_ID=
+
 # MongoDB
 MONGODB_URI=mongodb://atlas-sql-68d2c03cc9550f5ab11ceb56-0iyvtu.a.query.mongodb.net/seasonal-tune-planner?ssl=true&authSource=admin
 
